refactor: Type시스템 구조 변경 및 Period 재계산 로직 개선
- TypeVersionElement와 관련된 클래스를 제거하고 새로운 구조에 맞게 리팩토링
- Period 및 관련 레이아웃 재계산 로직 추가 (PeriodRecalculationService)
- Type 및 Attribute 관리와 관련된 클래스의 구조 변경
- UI 컴포넌트간 연결 및 동작 로직 업데이트
- 종속성 및 구독 패턴 개선을 통해 상태 관리 강화